# FCEUmmWrapper-WSL

./: .cursorignore  .gitignore  .gitmodules  ACTIVATION_AUDIO.md  AMELIORATIONS_RETROARCH_COMPLET.md  AMELIORATION_ASPECT_RATIO.md  AMÉLIORATIONS_AUDIO.md  AMÉLIORATIONS_BUFFER_AUDIO.md  AMÉLIORATIONS_DIAGONALES.md  ANALYSE_CONFLITS_MENU_EMULATION.md  ANALYSE_GAMEPAD_COMPLETE.md  ANALYSE_SUPPRESSION_MAINACTIVITY.md  APPROCHE_OFFICIELLE_LIBRETRO.md  AUDIO_LATENCY_OPTIMIZATION.md  AUDIO_NATIVE_IMPLEMENTATION.md  AUDIO_NATIVE_SUMMARY.md  AUDIT_AFFICHAGE_OVERLAYS_COMPLET.md  AUDIT_AUDIO_OPENSLE_FIX.md  AUDIT_AUDIO_SIMPLIFIE.md  AUDIT_COMBINAISONS_BOUTONS.md  AUDIT_COMPLET_BOUTONS_SPECIAUX_RETROARCH.md  AUDIT_COMPLET_PROJET_FCEUMMWRAPPER.md  AUDIT_CONTRÔLES.md  AUDIT_FINAL_CORRECTIONS_RETROARCH.md  AUDIT_FINAL_GAMEPAD_SUMMARY.md  AUDIT_FINAL_REPORT.md  AUDIT_FINAL_RETROARCH_COMPLET.md  AUDIT_GAMEPAD_FONCTIONS_MANQUANTES.md  AUDIT_PROFESSIONNEL_RETROARCH_COMPLET.md  AUDIT_SUPPRESSION_ACTIVITE_PRINCIPALE.md  AUDIT_SYSTEME_AFFICHAGE_COMPLET.md  AUDIT_SYSTEME_OVERLAYS_COMPLET.md  CORE_CUSTOM_COMPILATION.md  CORRECTIONS_AFFICHAGE_OVERLAYS_APPLIQUEES.md  CORRECTIONS_BOUTONS_SPECIAUX_SENSIBILITE.md  CORRECTIONS_SYSTEME_AFFICHAGE_APPLIQUEES.md  CORRECTIONS_SYSTEME_OVERLAYS_APPLIQUEES.md  CORRECTION_AUDIO_FINALE.md  CORRECTION_AUDIO_SIMPLIFIEE.md  CORRECTION_GLITCHES_AUDIO.md  (+317 more)
app/src/main/cpp/: CMakeLists.txt  RetroArchAudioManager.cpp  RetroArchAudioManager.h  RetroArchOverlaySystem.h  RetroArchVideoManager.cpp  RetroArchVideoManager.h  android-toolchain.cmake  fceumm-config.cmake  fceumm_core.h  native-lib.cpp  native-lib.cpp.backup  optimization-flags.cmake
(+142 files in other folders)
